# VirMat

./: .gitmodules  LICENSE  VirMat.cabal  sources.txt  stack.yaml
src/: CommandLineInput.hs  DelaunayReverseOnion.hs  DelaunayStatistics.hs  Delauny.hs  GrainDistributionGenerator.hs  GrainQuery.hs  Graph2D.hs  IMC.hs  JunctionSimulation.hs  Main.hs  MainOriginal.hs  OnionLayerControl.hs  ShowData.hs  VTKGen.hs  Viewer3D.hs  VoronoiBuilder.hs  VoronoiCreator.hs  templateVTKXML.hs
src/Core/: IMC.hs  VoronoiBuilder.hs
src/Distributions/GrainSize/: DelaunayStatistics.hs  GrainDistributionGenerator.hs  GrainQuery.hs
src/Distributions/Texture/: DiscreteODF.hs  ODFSampling.hs
src/Douane/Export/VTK/: VTKODFWriter.hs  templateVTKXML.hs  templateVTKXMLStruc.hs  vtkGen.hs  vtkGenSimplex.hs  vtkGenTetra.hs
src/Douane/Export/Viewer/: ShowData.hs  Viewer3D.hs
src/Douane/Import/MTF/: MTMDiscreteODFReader.hs
src/Douane/Import/Prompt/: CommandLineInput.hs
src/IO/Export/VTK/: VTKODFRender.hs  VTKVoronoiGrainRender.hs
src/IO/Import/: CommandLineInput.hs
src/IO/Import/MTF/: MTMDiscreteODFReader.hs
src/VirMat/: PhaseTrans.hs  Run2D.hs  Run3D.hs  Types.hs
src/VirMat/Core/: FlexGrainBuilder.hs  FlexMicro.hs  Packer.hs  Sampling.hs  VoronoiBuilder.hs  VoronoiMicro.hs
src/VirMat/Distributions/GrainSize/: GrainDistributionGenerator.hs  GrainQuery.hs  StatTools.hs
src/VirMat/Distributions/Texture/: DiscreteODF.hs  ODFSampling.hs
src/VirMat/IO/Export/: Types.hs
src/VirMat/IO/Export/ANG/: RasterEngine.hs
src/VirMat/IO/Export/SVG/: RenderSVG.hs
src/VirMat/IO/Export/VTK/: FlexMicro.hs  VTKODFRender.hs  VTKVoronoiGrainRender.hs
src/VirMat/IO/Import/: CommandLine.hs  CommandLineInput.hs  Types.hs
src/VirMat/IO/Import/MTF/: MTMDiscreteODFReade.hs
