Name:                VirMat
Version:             0.4
License:             GPL-3
License-file:        ""
Author:              Edgar Gomes de Araujo
Maintainer:          Edgar Gomes de Araujo <talktoedgar@gmail.com>
Homepage:            
Stability:           Experimental
Synopsis:            3D Microstructure Generator
Description:         
    Creates virtual microstructure in 3 dimesions.
Cabal-version:       >= 1.8
Build-type:          Simple
Category:            Data, Math

Flag cmdline
    Description:        Build the exectable using command line.
    Default:            False

Executable virmat
    hs-source-dirs:     src
    main-is:            Main.hs
    ghc-options:        -Wall
                        -O3
                        -threaded
                        -rtsopts
                        -auto-all
                        -caf-all

    Build-Depends:      VirMat
                      , base                   == 4.*
                      , hammer                 == 0.2.*
                      , DeUni                  == 0.3.*
                      , containers             == 0.5.*
                      , vector                 == 0.10.*
                      , SubZero                == 0.1.*
                      , aeson                  == 0.6.*
                      , diagrams-lib           >= 0.5   && < 0.7
                      , diagrams-svg           >= 0.3.5 && < 0.7
                      , colour                 == 2.*
                      , blaze-html             == 0.6.*
                      , blaze-svg              >= 0.3.3 && < 0.4
                      , blaze-builder          == 0.3.*
                      , bytestring             >= 0.9   && < 0.11
                      , mersenne-random-pure64 == 0.2.*
                      , random-source          == 0.3.*
                      , random-fu              == 0.2.*
                      , transformers           == 0.3.*
                      , mtl                    == 2.*
                      , parsec                 == 3.*
    if flag(cmdline)
      Buildable:        True
    else
      Buildable:        False

library
    ghc-options: -Wall
                 -fwarn-tabs
                 -funbox-strict-fields
                 -O2
    hs-source-dirs:     src
    Build-Depends:      base                   == 4.*
                      , hammer                 == 0.2.*
                      , DeUni                  == 0.3.*
                      , containers             == 0.5.*
                      , vector                 == 0.10.*
                      , SubZero                == 0.1.*
                      , aeson                  == 0.6.*
                      , diagrams-lib           >= 0.5   && < 0.7
                      , diagrams-svg           >= 0.3.5 && < 0.7
                      , colour                 == 2.*
                      , blaze-html             == 0.6.*
                      , blaze-svg              >= 0.3.3 && < 0.4
                      , blaze-builder          == 0.3.*
                      , bytestring             >= 0.9   && < 0.11
                      , mersenne-random-pure64 == 0.2.*
                      , random-source          == 0.3.*
                      , random-fu              == 0.2.*
                      , transformers           == 0.3.*
                      , mtl                    == 2.*
                      , parsec                 == 3.*

    Exposed-modules:    VirMat.Run2D
                        VirMat.Run3D
                        VirMat.Types

                        VirMat.Core.VoronoiBuilder
                        VirMat.Core.Packer
                        VirMat.Core.Sampling
                        VirMat.Core.FlexGrainBuilder
                        
                        VirMat.Distributions.GrainSize.StatTools
                        VirMat.Distributions.GrainSize.GrainDistributionGenerator
                        VirMat.Distributions.GrainSize.GrainQuery
                        VirMat.Distributions.Texture.DiscreteODF

                        VirMat.IO.Export.Types
                        VirMat.IO.Export.VTK.VTKVoronoiGrainRender
                        VirMat.IO.Export.SVG.RenderSVG

                        VirMat.IO.Import.Types






